Fixes the bug: dropdown overlaps the bottom navbar

--- a/src/app/user-profile/account-settings/account-settings.component.scss
+++ b/src/app/user-profile/account-settings/account-settings.component.scss
@@ -111,9 +111,9 @@
   }
   
   @media (max-width: 991px){
-    .bottom-nav { 
-        // top: -2px !important;
-    }
+    // .bottom-nav { 
+    //     // top: -2px !important;
+    // }
   
     .chart-wrapper {
         margin-top:60px !important;
