--- a/src/app/user-profile/change-password/change-password.component.scss
+++ b/src/app/user-profile/change-password/change-password.component.scss
@@ -7,6 +7,7 @@ input[type=text] {
    width: 100%;
    margin-bottom: 10px;
    -webkit-appearance: none;
+   appearance: none;
    background: #fff;
    border: 1px solid #d9d9d9 !important;
    border-top: 1px solid #c0c0c0;
@@ -26,6 +27,7 @@ input[type=password] {
    width: 100%;
    margin-bottom: 10px;
    -webkit-appearance: none;
+   appearance: none;
    background: #fff;
    border: 1px solid #d9d9d9 !important;
    border-top: 1px solid #c0c0c0;
@@ -106,6 +108,7 @@ select {
 
 button.close {
     -webkit-appearance: none;
+    appearance: none;
     padding: 0;
     cursor: pointer;
     background: 0 0;
@@ -171,7 +174,7 @@ button.close {
     padding-left: 0px;
     display: flex;
     flex-grow: 1;
-    z-index: 1049;
+    // z-index: 1049;
   }
   
   .bottom-nav li {
@@ -261,9 +264,9 @@ button.close {
   }
   
   @media (max-width: 991px){
-    .bottom-nav { 
-        // top: -2px !important;
-    }
+    // .bottom-nav { 
+    //     top: -2px !important;
+    // }
   
     .chart-wrapper {
         margin-top:60px !important;
